fix syntax issue

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,6 @@ jobs:
     - run: wget -qO - https://dl.winehq.org/wine-builds/winehq.key | sudo apt-key add -
     - run: sudo add-apt-repository ppa:cybermax-dexter/sdl2-backport
     - run: sudo apt-add-repository "deb https://dl.winehq.org/wine-builds/ubuntu $(lsb_release -cs) main"
-    - run: udo apt install --install-recommends winehq-stable
+    - run: sudo apt install --install-recommends winehq-stable
     #- run: sudo apt install --install-recommends winehq-stable
     - run: ./python/build_wine.sh
