--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,5 +17,5 @@ jobs:
     - run: sudo add-apt-repository ppa:cybermax-dexter/sdl2-backport
     - run: sudo apt-add-repository "deb https://dl.winehq.org/wine-builds/ubuntu $(lsb_release -cs) main"
     - run: sudo apt install --install-recommends winehq-stable
-    #- run: sudo apt install --install-recommends winehq-stable
+    - run: sudo apt-get install -y faketime
     - run: ./python/build_wine.sh
