--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,15 +7,15 @@ on:
 
 jobs:
   buildWinBin:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
       with:
         lfs: 'true'
-    # - run: sudo dpkg --add-architecture i386
-    # - run: wget -qO - https://dl.winehq.org/wine-builds/winehq.key | sudo apt-key add -
-    # - run: sudo add-apt-repository ppa:cybermax-dexter/sdl2-backport
-    # - run: sudo apt-add-repository "deb https://dl.winehq.org/wine-builds/ubuntu $(lsb_release -cs) main"
-    # - run: sudo apt install --install-recommends winehq-stable
-    # - run: sudo apt-get install -y faketime
-    - run: .\python\build_bin.sh
+    - run: sudo dpkg --add-architecture i386
+    - run: wget -qO - https://dl.winehq.org/wine-builds/winehq.key | sudo apt-key add -
+    - run: sudo add-apt-repository ppa:cybermax-dexter/sdl2-backport
+    - run: sudo apt-add-repository "deb https://dl.winehq.org/wine-builds/ubuntu $(lsb_release -cs) main"
+    - run: sudo apt install --install-recommends winehq-stable
+    - run: sudo apt-get install -y faketime
+    - run: ./python/build_wine.sh
